--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "repository": "https://github.com/Datapotomus/collatz-conjecture.git",
   "author": "Me",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "inquirer": "^8.1.2"
+  }
 }
